--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-click==8.1.7
-Pillow==10.2.0
-python-dotenv==1.0.1
-Requests==2.31.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+idna==3.10
+pillow==11.3.0
+python-dotenv==1.1.1
+requests==2.32.4
+ruff==0.12.7
+urllib3==2.5.0
