Update README.md and GitHub Actions workflow
- Updated README.md to reflect the correct GitHub username in badge links.
- Upgraded Python setup action to v5 and uv setup action to v6 in the GitHub Actions workflow.
- Updated Codecov action to v5 and added slug for better coverage reporting.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,12 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     
     - name: Install uv
-      uses: astral-sh/setup-uv@v3
+      uses: astral-sh/setup-uv@v6
       with:
         version: "latest"
     
@@ -40,7 +40,8 @@ jobs:
         uv run pytest tests/ -v --cov=src/bedwarsshop --cov-report=xml --cov-report=term
     
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
-        file: ./coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: true
+        slug: Cristality0/bedwarsShop
